--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 #main {
 	color: #DDD;
 	font-family: sans-serif;
-	font-size: 2em;
-	background-color: #222;
+	font-size: 1em;
+	background-color: #444;
 }
 
 #title {
-	align-self: center;
+	text-align: center;
 	font-family: monospace;
-	font-size: 5em;
+	font-size: 1.5em;
 }
 
 #img-div {
 	margin: 0;
+	background-color: #333;
+	padding: 1% 3%;
 }
 
 img {
@@ -22,15 +24,15 @@ img {
 	margin: 0 auto;
 }
 
-
-
 #image-caption {
 	font-style: italic;
-	font-size: 1em;
+	font-size: 0.75em;
+	margin: 0 auto;
 }
 
 #tribute-info {
-	background-color: #444;
+	padding: 15px;
+	margin: 0 auto;
 }
 
 #tribute-link {
@@ -45,5 +47,11 @@ img {
 	}
 	a:visited {
 		color: #FFA;
+	}
+}
+
+@media (min-width: 600px) {
+	#tribute-info {
+		padding: 15px 17.5%;
 	}
 }
